exports[`test builtin.js 1`] = `
"/**
 * @flow
 */

interface IHasLength {
  length: number;
}

var lengthTest1: IHasLength = [];
var lengthTest2: IHasLength = \'hello\';
var lengthTest3: IHasLength = 123; // number doesn\'t have length
var lengthTest4: IHasLength = true; // bool doesn\'t have length
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/src/printer.js:1391
          fromString(\", \").join(path.map(print, \"extends\"))
                           ^

TypeError: fromString(...).join is not a function
    at genericPrintNoParens (/src/printer.js:1391:28)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
    at printGenerically (/src/printer.js:111:12)
    at /src/printer.js:1601:18
    at FastPath.map (/src/fast-path.js:167:19)
    at printStatementSequence (/src/printer.js:1586:8)
    at /src/printer.js:238:16
    at FastPath.call (/src/fast-path.js:113:16)
"
`;

exports[`test class.js 1`] = `
"/**
 * @flow
 */

class ClassWithXString {
  x: string;
}

interface IHasXString {
  x: string;
}

interface IHasXNumber {
  x: number;
}

interface IHasYString {
  y: string;
}

var testInstance1: IHasXString = new ClassWithXString();
var testInstance2: IHasXNumber = new ClassWithXString(); // Error wrong type
var testInstance3: IHasYString = new ClassWithXString(); // Error missing prop
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/src/printer.js:1391
          fromString(\", \").join(path.map(print, \"extends\"))
                           ^

TypeError: fromString(...).join is not a function
    at genericPrintNoParens (/src/printer.js:1391:28)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
    at printGenerically (/src/printer.js:111:12)
    at /src/printer.js:1601:18
    at FastPath.map (/src/fast-path.js:167:19)
    at printStatementSequence (/src/printer.js:1586:8)
    at /src/printer.js:238:16
    at FastPath.call (/src/fast-path.js:113:16)
"
`;

exports[`test obj.js 1`] = `
"/**
 * @flow
 */

interface IHasXString {
  x: string;
}

var propTest1: IHasXString = { x: \'hello\' };
var propTest2: IHasXString = { x: 123 }; // Error string != number
var propTest3: IHasXString = {}; // Property not found
var propTest4: IHasXString = ({}: Object);

function propTest5(y: {[key: string]: string}) {
  (y: IHasXString); // OK
}

function propTest6(y: {[key: string]: number}) {
  (y: IHasXString); // error: string != number
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/src/printer.js:1391
          fromString(\", \").join(path.map(print, \"extends\"))
                           ^

TypeError: fromString(...).join is not a function
    at genericPrintNoParens (/src/printer.js:1391:28)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
    at printGenerically (/src/printer.js:111:12)
    at /src/printer.js:1601:18
    at FastPath.map (/src/fast-path.js:167:19)
    at printStatementSequence (/src/printer.js:1586:8)
    at /src/printer.js:238:16
    at FastPath.call (/src/fast-path.js:113:16)
"
`;

exports[`test optional.js 1`] = `
"/* @flow */

interface HasOptional {
  a: string,
  b?: number,
};

var test1: HasOptional = { a: \"hello\" }

var test2: HasOptional = {}; // Error: missing property a

var test3: HasOptional = { a: \"hello\", b: true }; // Error: boolean ~> number
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/src/printer.js:1391
          fromString(\", \").join(path.map(print, \"extends\"))
                           ^

TypeError: fromString(...).join is not a function
    at genericPrintNoParens (/src/printer.js:1391:28)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
    at printGenerically (/src/printer.js:111:12)
    at /src/printer.js:1601:18
    at FastPath.map (/src/fast-path.js:167:19)
    at printStatementSequence (/src/printer.js:1586:8)
    at /src/printer.js:238:16
    at FastPath.call (/src/fast-path.js:113:16)
"
`;
